# refract

./: .gitattributes  .gitignore  .righteous-sandbox.json  .travis.yml  CREDITS.md  Cargo.toml  README.md  about.toml  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yaml
refract/: Cargo.toml  build.rs
refract/skel/: index.html  main.html  main.min.html  pending.html  pending.min.html  refract.glade  resources.xml
refract/skel/css/: btn-discard.css  btn-keep.css  main.css  pending.css  spn-loading.css  wnd-image.css
refract/skel/deb/applications/: refract.desktop
refract/skel/deb/pixmaps/: refract.xpm
refract/skel/img/: transparent.xcf
refract/skel/js/: main.js  main.min.js
refract/skel/scss/: main.scss  pending.scss  reset.scss
refract/src/: app.rs  browser.rs  candidate.rs  cli.rs  image.rs  img.rs  main.rs  share.rs  source.rs  styles.rs  utility.rs  viewer.rs  window.rs
refract_core/: Cargo.toml
refract_core/src/: alpha.rs  avif.rs  candidate.rs  color.rs  error.rs  image.rs  input.rs  jxl.rs  kind.rs  lib.rs  output.rs  quality.rs  refraction.rs  source.rs  webp.rs
refract_core/src/dec/: alpha.rs  jpeg.rs  mod.rs  png.rs
refract_core/src/enc/: avif.rs  candidate.rs  iter.rs  jxl.rs  kind.rs  mod.rs  output.rs  quality.rs  range.rs  webp.rs
refract_core/src/encoder/: avif.rs  mod.rs  webp.rs
refract_core/src/image/: alpha.rs  color.rs  mod.rs  pixel.rs
refract_core/src/kind/: avif.rs  color.rs  image.rs  jpeg.rs  jxl.rs  mod.rs  webp.rs
refract_core/src/kind/png/: alpha.rs  mod.rs
refract_core/src/traits/: mod.rs
refract_gtk/: Cargo.toml  build.rs
refract_gtk/skel/: license.txt  refract.glade  resources.xml
refract_gtk/skel/css/: wnd-image.css  wnd-scroll.css
refract_gtk/skel/deb/applications/: refract-gtk.desktop
refract_gtk/skel/img/: transparent.xcf
refract_gtk/src/: candidate.rs  l10n.rs  main.rs  share.rs  window.rs
release/completions/: refract.bash
release/credits/: about.hbs
release/man/: refract.1
skel/: myrna.txt  reference.txt
src/: candidate.rs  error.rs  image.rs  kind.rs  main.rs  quality.rs  refraction.rs
src/encoder/: avif.rs  mod.rs  webp.rs
