[package]
name = "refract"
version = "0.7.2"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "Refract GTK is a guided AVIF/JPEG XL/WebP conversion utility for JPEG and PNG sources."
repository = "https://github.com/Blobfolio/refract"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
replaces = "refract-gtk"
conflicts = "refract-gtk"
section = "utility"
extended-description = """\
.\n\
Refract GTK is a guided AVIF/JPEG XL/WebP conversion utility for JPEG and PNG sources, simplifying the task of finding the smallest acceptable quality.\n \
"""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/refract", "usr/bin/", "755"],
    ["./skel/deb/applications/refract.desktop", "/usr/share/applications/", "644"],
    ["./skel/deb/icons/hicolor/32x32/apps/refract.png", "/usr/share/icons/hicolor/32x32/apps/", "644"],
    ["./skel/deb/icons/hicolor/48x48/apps/refract.png", "/usr/share/icons/hicolor/48x48/apps/", "644"],
    ["./skel/deb/icons/hicolor/64x64/apps/refract.png", "/usr/share/icons/hicolor/64x64/apps/", "644"],
    ["./skel/deb/icons/hicolor/96x96/apps/refract.png", "/usr/share/icons/hicolor/96x96/apps/", "644"],
    ["./skel/deb/icons/hicolor/128x128/apps/refract.png", "/usr/share/icons/hicolor/128x128/apps/", "644"],
    ["./skel/deb/icons/hicolor/256x256/apps/refract.png", "/usr/share/icons/hicolor/256x256/apps/", "644"],
    ["./skel/deb/icons/hicolor/512x512/apps/refract.png", "/usr/share/icons/hicolor/512x512/apps/", "644"],
    ["./skel/deb/pixmaps/refract.xpm", "/usr/share/pixmaps/", "644"],
]

[build-dependencies]
toml = "0.5.*"
version-compare = "0.1.*"

[dependencies]
crossbeam-channel = "0.5.*"
dactyl = "0.2.*"
dowser = "0.3.*"
oxford_join = "0.2.*"
write_atomic = "0.2.*"

[dependencies.gtk]
version = "0.14.*"
features = [ "v3_22" ]

[dependencies.refract_core]
path = "../refract_core"
features = [ "bin", "decode_ng" ]
