[package]
name = "refract"
version = "1.4.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "Guided AVIF/JPEG XL/WebP conversion for JPEG and PNG sources."
repository = "https://github.com/Blobfolio/refract"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto, xdg-desktop-portal-gnome | xdg-desktop-portal-gtk | xdg-desktop-portal-kde | zenity"
replaces = "refract-gtk"
conflicts = "refract-gtk"
section = "graphics"
extended-description = """\
.\n\
Refract is a guided AVIF/JPEG XL/WebP conversion utility for JPEG and PNG sources, simplifying the task of finding the smallest acceptable quality."""
assets = [
    ["../target/release/refract", "usr/bin/", "755"],
    ["./skel/deb/applications/refract.desktop", "/usr/share/applications/", "644"],
    ["./skel/deb/icons/hicolor/32x32/apps/refract.png", "/usr/share/icons/hicolor/32x32/apps/", "644"],
    ["./skel/deb/icons/hicolor/48x48/apps/refract.png", "/usr/share/icons/hicolor/48x48/apps/", "644"],
    ["./skel/deb/icons/hicolor/64x64/apps/refract.png", "/usr/share/icons/hicolor/64x64/apps/", "644"],
    ["./skel/deb/icons/hicolor/96x96/apps/refract.png", "/usr/share/icons/hicolor/96x96/apps/", "644"],
    ["./skel/deb/icons/hicolor/128x128/apps/refract.png", "/usr/share/icons/hicolor/128x128/apps/", "644"],
    ["./skel/deb/icons/hicolor/256x256/apps/refract.png", "/usr/share/icons/hicolor/256x256/apps/", "644"],
    ["./skel/deb/icons/hicolor/512x512/apps/refract.png", "/usr/share/icons/hicolor/512x512/apps/", "644"],
    ["./skel/deb/pixmaps/refract.xpm", "/usr/share/pixmaps/", "644"],
    ["../release/completions/refract.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/refract.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Refract"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
short = "-e"
long = "--exit-auto"
description = "Exit the program after the last image has been processed."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--no-avif"
description = "Skip AVIF encoding."

[[package.metadata.bashman.switches]]
long = "--no-jxl"
description = "Skip JPEG-XL encoding."

[[package.metadata.bashman.switches]]
long = "--no-webp"
description = "Skip WebP encoding."

[[package.metadata.bashman.switches]]
long = "--no-lossless"
description = "Skip lossless encoding passes."

[[package.metadata.bashman.switches]]
long = "--no-lossy"
description = "Skip lossy encoding passes."

[[package.metadata.bashman.switches]]
long = "--no-ycbcr"
description = "Skip AVIF YCbCr encoding passes."

[[package.metadata.bashman.switches]]
short = "-s"
long = "--save-auto"
description = "Automatically save successful conversions to their source paths — with new extensions appended — instead of popping file dialogues for confirmation."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) image and/or directory paths from this text file — or STDIN if '-' — one path per line, instead of or in addition to those specified inline via <PATH(S)>."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Image and/or directory paths to re-encode. Directories will be crawled recursively."

[build-dependencies.refract_core]
path = "../refract_core"
default-features = false
features = [ "png" ]

[dependencies]
argyle = "0.14.*"
dactyl = "0.13.*"
dowser = "0.18.*"
fyi_ansi = "2.4.*"
iced_runtime = "0.14.0" # Iced doesn't re-export Allocation, etc.
open = "=5.3.3"
rfd = "=0.16.0"
unicode-width = "0.2.*"
write_atomic = "0.7.*"

[dependencies.iced]
version = "=0.14.0"
features = [ "image-without-codecs", "tokio" ]

[dependencies.refract_core]
path = "../refract_core"
features = [ "images" ]

[dependencies.tokio]
version = "=1.48.*"
default-features = false
features = [ "rt", "rt-multi-thread", "time" ]

[dependencies.utc2k]
version = "0.18.*"
features = [ "local" ]
