[package]
name = "refract_core"
version = "0.12.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "The library for Refract."
repository = "https://github.com/Blobfolio/refract"
readme = "README.md"
publish = false

[dependencies]
dactyl = "0.9.*"
jpeg-decoder = "=0.3.1"
link-cplusplus = "=1.0.9"

[dependencies.lodepng]
version = "=3.11.0"
default-features = false
features = [ "rust_backend" ]

[dependencies.jpegxl-sys]
version = "=0.11.2"
default-features = false
features = [ "vendored" ]

[dependencies.libavif-sys]
version = "=0.17.0"
default-features = false
features = [ "codec-aom" ]

[dependencies.libwebp-sys2]
version = "=0.1.10"
features = [ "1_1", "static" ]

[dependencies.rgb] # Match lodepng's dependency listing.
version = "0.8.47"
default-features = false
features = ["bytemuck"]

[features]
default = []

# This feature adds a few generic RefractError types for the binary. It is not
# something external crates implementing this library would really need to use.
bin = []

# This feature enables decoding support for the next-gen image formats, i.e.
# WebP, AVIF, and JPEG XL.
decode_ng = []
