[package]
name = "refract_core"
version = "1.0.4"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "The library for Refract."
repository = "https://github.com/Blobfolio/refract"
readme = "README.md"
publish = false

[dependencies]
fyi_ansi = "2.1.*"

[dependencies.dactyl]
version = "0.11.*"
optional = true

[dependencies.jpeg-decoder]
version = "=0.3.1"
optional = true

[dependencies.link-cplusplus]
version = "=1.0.10"
optional = true

[dependencies.lodepng]
version = "=3.11.0"
default-features = false
features = [ "rust_backend" ]
optional = true

[dependencies.jpegxl-sys]
version = "=0.11.2"
default-features = false
features = [ "vendored" ]
optional = true

[dependencies.libavif-sys]
version = "=0.17.0"
default-features = false
features = [ "codec-aom" ]
optional = true

[dependencies.libwebp-sys2]
version = "=0.2.0"
features = [ "static" ]
optional = true

[dependencies.rgb] # Match lodepng's dependency listing.
version = "0.8.47"
default-features = false
features = ["bytemuck"]
optional = true

[features]
default = [ "images" ]

# Enable all image formats.
images = [ "jpeg", "png", "avif", "jxl", "webp" ]

# Support AVIF.
avif = [ "dactyl", "libavif-sys" ]

# Support JPEG (decode-only).
jpeg = [ "jpeg-decoder", "rgb" ]

# Support JPEG-XL.
jxl = [ "dactyl", "jpegxl-sys", "link-cplusplus" ]

# Support PNG (decode-only).
png = [ "lodepng" ]

# Support WebP.
webp = [ "dactyl", "libwebp-sys2" ]
